# stk

./: .gitignore  Makefile.am  configure.ac
doc/doxygen/: Doxyfile.in  Makefile.am
doc/html/: ADSR_8h_source.html  Asymp_8h_source.html  BandedWG_8h_source.html  BeeThree_8h_source.html  BiQuad_8h_source.html  BlitSaw_8h_source.html  BlitSquare_8h_source.html  Blit_8h_source.html  BlowBotl_8h_source.html  BlowHole_8h_source.html  BowTable_8h_source.html  Bowed_8h_source.html  Brass_8h_source.html  Chorus_8h_source.html  Clarinet_8h_source.html  Cubic_8h_source.html  DelayA_8h_source.html  DelayL_8h_source.html  Delay_8h_source.html  Drummer_8h_source.html  Echo_8h_source.html  Effect_8h_source.html  Envelope_8h_source.html  FMVoices_8h_source.html  FM_8h_source.html  FileLoop_8h_source.html  FileRead_8h_source.html  FileWrite_8h_source.html  FileWvIn_8h_source.html  FileWvOut_8h_source.html  Filter_8h_source.html  Fir_8h_source.html  Flute_8h_source.html  FormSwep_8h_source.html  FreeVerb_8h_source.html  Function_8h_source.html  Generator_8h_source.html  Granulate_8h_source.html  Guitar_8h_source.html  HevyMetl_8h_source.html  (+366 more)
include/: Makefile.am
projects/: Makefile.am
projects/demo/: Makefile.am  Md2Skini.cpp
projects/effects/: Makefile.am
projects/eguitar/: Makefile.am
projects/examples/: Makefile.am
projects/ragamatic/: Makefile.am
src/: Makefile.am
