library_includedir=$(includedir)/stk
library_include_HEADERS=ADSR.h Asymp.h BandedWG.h BeeThree.h BiQuad.h Blit.h \
												BlitSaw.h BlitSquare.h BlowBotl.h BlowHole.h Bowed.h \
												BowTable.h Brass.h Chorus.h Clarinet.h Cubic.h \
												DelayA.h Delay.h DelayL.h Drummer.h Echo.h Effect.h \
												Envelope.h FileLoop.h FileRead.h FileWrite.h \
												FileWvIn.h FileWvOut.h Filter.h Fir.h Flute.h FM.h \
												FMVoices.h FormSwep.h FreeVerb.h Function.h \
												Generator.h Granulate.h Guitar.h HevyMetl.h Iir.h \
												InetWvIn.h InetWvOut.h Instrmnt.h JCRev.h JetTable.h \
												LentPitShift.h Mandolin.h Mesh2D.h Messager.h \
												MidiFileIn.h ModalBar.h Modal.h Modulate.h Moog.h \
												Mutex.h Noise.h NRev.h OnePole.h OneZero.h PercFlut.h \
												Phonemes.h PitShift.h Plucked.h PoleZero.h PRCRev.h \
												ReedTable.h Resonate.h Rhodey.h RtAudio.h RtError.h \
												RtMidi.h RtWvIn.h RtWvOut.h Sampler.h Saxofony.h \
												Shakers.h Simple.h SineWave.h SingWave.h Sitar.h \
												Skini.h SKINI.msg Socket.h Sphere.h StifKarp.h Stk.h \
												TapDelay.h TcpClient.h TcpServer.h Thread.h TubeBell.h \
												Twang.h TwoPole.h TwoZero.h UdpSocket.h Vector3D.h \
												Voicer.h VoicForm.h Whistle.h Wurley.h WvIn.h WvOut.h
