lib_LTLIBRARIES = libstk.la
libstk_la_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
libstk_la_SOURCES = ADSR.cpp Asymp.cpp BandedWG.cpp BeeThree.cpp BiQuad.cpp \
										Blit.cpp BlitSaw.cpp BlitSquare.cpp BlowBotl.cpp \
										BlowHole.cpp Bowed.cpp Brass.cpp Chorus.cpp Clarinet.cpp \
										DelayA.cpp Delay.cpp DelayL.cpp Drummer.cpp Echo.cpp \
										Envelope.cpp FileLoop.cpp FileRead.cpp FileWrite.cpp \
										FileWvIn.cpp FileWvOut.cpp Fir.cpp Flute.cpp FM.cpp \
										FMVoices.cpp FormSwep.cpp FreeVerb.cpp Granulate.cpp \
										Guitar.cpp HevyMetl.cpp Iir.cpp \
										InetWvIn.cpp InetWvOut.cpp JCRev.cpp LentPitShift.cpp \
										Mandolin.cpp Mesh2D.cpp Messager.cpp MidiFileIn.cpp \
										ModalBar.cpp Modal.cpp Modulate.cpp Moog.cpp Mutex.cpp \
										Noise.cpp NRev.cpp OnePole.cpp OneZero.cpp PercFlut.cpp \
										Phonemes.cpp PitShift.cpp Plucked.cpp PoleZero.cpp \
										PRCRev.cpp Resonate.cpp Rhodey.cpp RtAudio.cpp RtMidi.cpp \
										RtWvIn.cpp RtWvOut.cpp Sampler.cpp Saxofony.cpp \
										Shakers.cpp Simple.cpp SineWave.cpp SingWave.cpp \
										Sitar.cpp Skini.cpp Socket.cpp Sphere.cpp StifKarp.cpp \
										Stk.cpp TapDelay.cpp TcpClient.cpp TcpServer.cpp \
										Thread.cpp TubeBell.cpp Twang.cpp TwoPole.cpp TwoZero.cpp \
										UdpSocket.cpp Voicer.cpp VoicForm.cpp Whistle.cpp Wurley.cpp


#										include/asio.cpp include/asiodrivers.cpp \
#										include/asiolist.cpp include/iasiothiscallresolver.cpp
