bin_PROGRAMS = demo Md2Skini

demo_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
demo_SOURCES = demo.cpp utilities.cpp
demo_LDADD = $(top_srcdir)/src/libstk.la

Md2Skini_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
Md2Skini_SOURCES = Md2Skini.cpp
Md2Skini_LDADD = $(top_srcdir)/src/libstk.la
