bin_PROGRAMS = audioprobe bethree controlbee crtsine duplex foursine grains inetIn inetOut midiprobe play playsmf record rtsine sine sineosc threebees

audioprobe_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
audioprobe_SOURCES = audioprobe.cpp
audioprobe_LDADD = $(top_srcdir)/src/libstk.la

bethree_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
bethree_SOURCES = bethree.cpp
bethree_LDADD = $(top_srcdir)/src/libstk.la

controlbee_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
controlbee_SOURCES = controlbee.cpp
controlbee_LDADD = $(top_srcdir)/src/libstk.la

crtsine_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
crtsine_SOURCES = crtsine.cpp
crtsine_LDADD = $(top_srcdir)/src/libstk.la

duplex_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
duplex_SOURCES = duplex.cpp
duplex_LDADD = $(top_srcdir)/src/libstk.la

foursine_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
foursine_SOURCES = foursine.cpp
foursine_LDADD = $(top_srcdir)/src/libstk.la

grains_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
grains_SOURCES = grains.cpp
grains_LDADD = $(top_srcdir)/src/libstk.la

inetIn_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
inetIn_SOURCES = inetIn.cpp
inetIn_LDADD = $(top_srcdir)/src/libstk.la

inetOut_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
inetOut_SOURCES = inetOut.cpp
inetOut_LDADD = $(top_srcdir)/src/libstk.la

midiprobe_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
midiprobe_SOURCES = midiprobe.cpp
midiprobe_LDADD = $(top_srcdir)/src/libstk.la

play_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
play_SOURCES = play.cpp
play_LDADD = $(top_srcdir)/src/libstk.la

playsmf_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
playsmf_SOURCES = playsmf.cpp
playsmf_LDADD = $(top_srcdir)/src/libstk.la

record_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
record_SOURCES = record.cpp
record_LDADD = $(top_srcdir)/src/libstk.la

rtsine_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
rtsine_SOURCES = rtsine.cpp
rtsine_LDADD = $(top_srcdir)/src/libstk.la

sine_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
sine_SOURCES = sine.cpp
sine_LDADD = $(top_srcdir)/src/libstk.la

sineosc_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
sineosc_SOURCES = sineosc.cpp
sineosc_LDADD = $(top_srcdir)/src/libstk.la

threebees_CPPFLAGS = -I$(top_srcdir)/include $(AM_CPPFLAGS)
threebees_SOURCES = midiprobe.cpp
threebees_LDADD = $(top_srcdir)/src/libstk.la
